[tool.poetry]
name = "nornir-nautobot"
version = "3.3.2a0"
description = "Nornir Nautobot"
authors = ["Network to Code, LLC <opensource@networktocode.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["Nautobot"]
classifiers = [
  "Intended Audience :: Developers",
  "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
repository = "https://github.com/nautobot/nornir-nautobot"
homepage = "https://nautobot.com"
documentation = "https://nornir-nautobot.readthedocs.io"

[tool.poetry.urls]
"Changelog" = "https://docs.nautobot.com/projects/nornir-nautobot/en/latest/dev/CHANGELOG/"
"Bug Tracker" = "https://github.com/nautobot/nornir-nautobot/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
nornir = "^3.3.0"
requests = "^2.30.1"
nornir-utils = "^0"
nornir-napalm = ">=0.5.0 <1.0.0"
nornir-jinja2 = "^0.2.0"
nornir-netmiko = "^1"
pynautobot = ">=2.4.0,<3.0.0"
netutils = "^1.9.0"
routeros-api = {version = "^0.17.0", optional = true}
httpx = ">=0.23.0,<=0.27.0"
nornir-scrapli = "^2025.1.30"
netmiko = "^4.4.0"
napalm = "^5.0.0"
scrapli = ">=2024.01.30"

[tool.poetry.dev-dependencies]
pytest = "*"
requests_mock = "*"
pyyaml = "*"
black = "*"
pylint = "*"
pydocstyle = "*"
yamllint = "*"
bandit = "*"
invoke = "*"
toml = "*"
flake8 = "*"
pydantic = {version = "^1.7.2", extras = ["dotenv"]}
# documentation dependencies
# Render custom markdown for version added/changed/remove notes
markdown-version-annotations = "1.0.1"
# Rendering docs to HTML
mkdocs = "1.6.0"
# Material for MkDocs theme
mkdocs-material = "9.5.32"
# Automatic documentation from sources, for MkDocs
mkdocstrings = "0.25.2"
mkdocstrings-python = "1.10.8"
mkdocs-autorefs = "1.2.0"
griffe = "1.1.1"

[tool.poetry.extras]
mikrotik_driver = ["routeros-api"]

[tool.poetry.plugins."nornir.plugins.inventory"]
"NautobotInventory" = "nornir_nautobot.plugins.inventory.nautobot:NautobotInventory"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"


[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    duplicate-code,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests/"
addopts = "-vv"
